2005-06-16  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/swf.c:
	* libswfdec/tags.h:
	Document a couple more tag names.  Couldn't find what MX4 is.

2005-06-16  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/swfdec_shape.c: (swf_shape_add_styles),
	(swfdec_shape_compose):
	Add support for fill style type 0x42 and 0x43, the unsmoothed versions
	of the previous two fill styles.  Actually, the previous two are
	unsmoothed in our current implementation.  Also, attempt to support
	repeating fill styles, though I don't have a good test for them.

2005-05-27  David Schleef  <ds@schleef.org>

	* MAINTAINERS: add contact info
	* README:

2005-05-21  David Schleef  <ds@schleef.org>

	* libswfdec/swfdec_audio.c: (swfdec_audio_render): Fix
	  copy-past-end-of-buffer bug that was causing noise.

2005-05-21  David Schleef  <ds@schleef.org>

	* libswfdec/Makefile.am:
	* libswfdec/swf.c:
	* libswfdec/swfdec_audio.c:
	* libswfdec/swfdec_audio.h:
	* libswfdec/swfdec_buffer.c:
	* libswfdec/swfdec_buffer.h:
	* libswfdec/swfdec_decoder.h:
	* libswfdec/swfdec_internal.h:
	* libswfdec/swfdec_render.c:
	* libswfdec/swfdec_sound.c:
	  Mostly implement an audio mixing subsystem.

2005-05-12  David Schleef  <ds@schleef.org>

	* plugin/swfdec-mozilla-player.c: (create_pipeline): Add a
	colorspace to the pipeline, since a negotiation failure will
	occur unless the XImage format is exactly the same as swfdec's
	colorspace.

2005-05-08  David Schleef  <ds@schleef.org>

	Fixes for -wsigned-compare, default in gcc-4.0:
	* configure.ac: reenable -Werror
	* libswfdec/actions.c: (stack_pop), (stack_show),
	(stack_show_value):
	* libswfdec/jpeg/jpeg.c: (jpeg_decoder_decode_entropy_segment):
	* libswfdec/js/Makefile.am:
	* libswfdec/js/jsdtoa.c: (ulp), (b2d), (JS_strtod):
	* libswfdec/js/jsinterp.c: (js_Interpret):
	* libswfdec/js/jsstr.c: (str_split):
	* libswfdec/swfdec_actions.h:
	* libswfdec/swfdec_bits.c: (swfdec_bits_get_string):
	* libswfdec/swfdec_decoder.h:
